<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfile.UserEmailActivity">

    <include layout="@layout/normal_toolbar"
      ></include>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/newemail"/>



        <TextView
            android:id="@+id/tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textSize="12sp"
            android:layout_below="@id/heading"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/ueditemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tittle"
            android:hint="yourname@gmail.com"
            android:textSize="14sp"
            android:padding="15dp"
            android:background="@drawable/border"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ueditemail"
            android:text="@string/save"
            android:textSize="20dp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:background="@drawable/bubble_color"/>


    </RelativeLayout>


</LinearLayout>